# sample-apj-sup-sa

agentic-workloads/agentic-bedrock-benchmarking/: README.md  config.py  pyproject.toml
agentic-workloads/agentic-bedrock-benchmarking/.github/workflows/: ci.yml
agentic-workloads/agentic-bedrock-benchmarking/infra/: agentic-bedrock-benchmarking.yaml  deploy.sh
agentic-workloads/agentic-payments-mpp-workshop/: .gitignore  README.md
agentic-workloads/agentic-payments-mpp-workshop/app/listing-bot-lambda/: bedrock.mjs  generate.mjs  index.mjs  openapi-spec.mjs  package-lock.json  package.json  rules.json  secrets.mjs  stripe-mock.mjs  validate.mjs  validation.mjs
agentic-workloads/genai-product-canvas/: genai-product-canvas-template.pptx
agentic-workloads/nemoclaw-on-aws/: .gitignore  README.ja.md  README.md  main.tf  outputs.tf  user_data.sh  variables.tf
ai-coding-assistants/voice-pair-debugger/: README.md  architecture.md  bugs.md
ai-infra/: README.md
ai-infra/robotics-foundation-models-on-eks/: .gitignore  README.md  versions.yaml
ai-infra/robotics-foundation-models-on-eks/benchmarks/: README.md
ai-infra/robotics-foundation-models-on-eks/docs/: architecture.md  observability.md  osmo-compatibility.md  reproducibility.md  security.md  version-matrix.md
ai-infra/robotics-foundation-models-on-eks/examples/: README.md  run-workflow.sh
ai-infra/robotics-foundation-models-on-eks/infra/core/: main.tf  (+4 more)
ai-infra/robotics-foundation-models-on-eks/scripts/: common.sh  deploy-infra.sh  destroy.sh  preflight.sh  render_template.py  scan-public-ingress.sh
(+103 files in other folders)
